[workspace]
members = [".", "mdbook_incremental_preview", "mdbook_fork4ls"]

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/SichangHe/mdbook_ls"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
futures-util = "0.3"
handlebars = "5"
ignore = "0.4"
mdbook = { package = "mdbook_fork4ls", path = "mdbook_fork4ls", version = "0.4.40", default_features = false, features = [
    "search",
] }
mdbook_incremental_preview = { path = "mdbook_incremental_preview", version = "0.0" }
notify = "6"
notify-debouncer-mini = "0.4"
once_cell = "1"
opener = "0.7"
pathdiff = "0.2"
regex = "1"
serde_json = "1"
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
toml = "=0.5.11" # Do not update, see https://github.com/rust-lang/mdBook/issues/2037
tracing = { version = "0.1", default_features = false }
tracing-subscriber = { version = "0.3", default_features = false, features = [
    "ansi",
    "env-filter",
    "fmt",
    "smallvec",
    "tracing-log",
] }
warp = { version = "0.3", default-features = false, features = ["websocket"] }

[package]
name = "mdbook_ls"
version = "0.0.0"
edition.workspace = true
description = "mdBook Language Server."
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[profile.release]
lto = true
