[workspace]
members = [".", "mdbook_incremental_preview", "mdbook_fork4ls"]

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/SichangHe/mdbook_ls"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
drop_this = { version = "0.0", features = ["tokio"] }
futures-util = "0.3"
handlebars = "5"
ignore = "0.4"
mdbook = { package = "mdbook_fork4ls", path = "mdbook_fork4ls", version = "0.4.41-patch.2", features = [
    "search",
], default-features = false }
mdbook_incremental_preview = { path = "mdbook_incremental_preview", version = "0.0" }
notify = "6"
notify-debouncer-mini = "0.4"
once_cell = "1"
opener = "0.7"
pathdiff = "0.2"
regex = "1"
serde_json = "1"
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
tokio_gen_server = "0.4"
tokio_two_join_set = "0.0"
tokio-util = "0.7"
toml = "=0.5.11" # Do not update, see https://github.com/rust-lang/mdBook/issues/2037
tower-lsp = "0.20"
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", features = [
    "ansi",
    "env-filter",
    "fmt",
    "smallvec",
    "tracing-log",
], default-features = false }
warp = { version = "0.3", default-features = false, features = ["websocket"] }

[package]
name = "mdbook_ls"
version = "0.0.3"
edition.workspace = true
description = "mdBook Language Server."
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
clap = { workspace = true, optional = true }
drop_this.workspace = true
mdbook_incremental_preview.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["io-std"] }
tokio_gen_server.workspace = true
tower-lsp.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[features]
default = ["build-binary"]
build-binary = ["dep:clap"]

[[bin]]
name = "mdbook-ls"
path = "src/main.rs"
required-features = ["build-binary"]

[profile.release]
lto = true
