[package]
name = "mdbook_incremental_preview"
version = "0.0.0"
description = "Incrementally preview mdBook, patching changes instead of making full rebuilds."
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
futures-util.workspace = true
handlebars.workspace = true
ignore.workspace = true
mdbook.workspace = true
notify.workspace = true
notify-debouncer-mini.workspace = true
once_cell.workspace = true
opener.workspace = true
pathdiff.workspace = true
regex.workspace = true
serde_json.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
warp.workspace = true
